2012-03-02  Murray Cumming  <murrayc@murrayc.com>

	ColorSelection*: Document these as deprecated.

	* gtk/src/colorselection.hg: Add @deprecated doxygen tags.

2012-03-02  Murray Cumming  <murrayc@murrayc.com>

	FontChooserDialog: Remove default signal handler to prevent ABI break.

	* gtk/src/fontchooser.hg: Use the no_default_handler option because
	the signal was not actually in the gtkmm 3.2 API, because we did not
	generate the .defs for it.

2012-03-02  Murray Cumming  <murrayc@murrayc.com>

	Add property and signal defs for GtkFontChooser*.

	* tools/extra_defs_gen/generate_defs_gtk.cc: Add GTK_FONT_CHOOSER,
	GTK_FONT_CHOOSER_DIALOG and GTK_FONT_CHOOSER_WIDGET.
	* gtk/src/gtk_signals.defs: Update.

2012-03-02  Murray Cumming  <murrayc@murrayc.com>

	Add ColorChooser and ColorChooserDialog, deprecating ColorSelection*.

	* tools/extra_defs_gen/generate_defs_gtk.cc: Mention the new Color* 
	types.
	* gtk/src/gtk_signals.def
	* gtk/src/gtk_methods.defs: Update.

	* gtk/src/filelist.am:
	* gtk/src/colorchooser.[hg|ccg]: Add the ColorChooser interface.
	* gtk/src/colorchooserdialog.[hg|ccg]: Add ColorChooserDialog.
	* gtk/src/colorbutton.hg: Add a comment that we cannot derive this from
	the new interface, though the C API does that, because we cannot break
	ABI.
	* gtk/src/colorselection.hg: Deprecate ColorSelection and 
	ColorSelectionDialog, as in the C API.
	* gtk/gtkmm.h: Mention the new headers.
	* demos/gtk-demo/example_colorsel.cc: Use GtkChooserDialog instead of
	ColorSelectionDialog.

2012-03-01  José Alburquerque  <jaalburquerque@gmail.com>

	gmmproc: _CLASS_GTKOBJECT: Include destructor documentation.

	* tools/m4/class_gtkobject.m4: Include possible Doxygen comment block
	documentation sent to the new (in glibmm) SECTION_DTOR_DOCUMENTATION
	section from the use of the also new _DOCUMENT_DTOR() macro.

	Bug #668918.

2012-02-29  José Alburquerque  <jaalburquerque@gmail.com>

	tools: Add XML and defs generation scripts.
