@@ -24,10 +24,10 @@
 
 int main (int argc, char *argv[])
 {
-  Gtk::Main kit(argc, argv);
+  Glib::RefPtr<Gtk::Application> app =
+    Gtk::Application::create(argc, argv, "org.gtkmm.demos.demo");
 
   DemoWindow window;
 
-  kit.run(window);
-  return 0;
+  return app->run(window);
 }
