@@ -33,6 +33,8 @@
 #include <gdkmm/wrap_init.h>
 #include <gtkmm/wrap_init.h>
 
+_DEPRECATE_IFDEF_START
+
 namespace
 {
 
@@ -202,6 +204,8 @@ void GtkMainConnectionNode::list_notify_all()
 
 } // anonymous namespace
 
+_DEPRECATE_IFDEF_END
+
 
 namespace Gtk
 {
@@ -239,16 +243,11 @@ gint KeySnooperSig::gtk_callback(GtkWidget* widget, GdkEventKey* event, gpointer
   return 0;
 }
 
-_DEPRECATE_IFDEF_END
-
 /**** Gtk::Main -- static data *********************************************/
 
-_DEPRECATE_IFDEF_START
 KeySnooperSig Main::signal_key_snooper_;
-_DEPRECATE_IFDEF_END
 
 Main*         Main::instance_ = 0;
-
 
 /**** Gtk::Main -- construction/destruction ********************************/
 
@@ -394,16 +393,19 @@ guint Main::level()
   return instance_->level_impl();
 }
 
+_DEPRECATE_IFDEF_END
+
 bool Main::iteration(bool blocking)
 {
-  return instance_->iteration_impl(blocking);
+  return gtk_main_iteration_do(blocking);
 }
 
 bool Main::events_pending()
 {
-  return instance_->events_pending_impl();
+  return gtk_events_pending();
 }
 
+_DEPRECATE_IFDEF_START
 
 /**** Gtk::Main -- static signal accessors *********************************/
 
@@ -445,5 +447,8 @@ void Main::on_window_hide()
   quit_impl();
 }
 
+_DEPRECATE_IFDEF_END
+
 } /* namespace Gtk */
+
 
