@@ -33,9 +33,10 @@ _DEFS(gtkmm,gtk)
 #define GDK_DISABLE_DEPRECATION_WARNINGS 1
 #m4 _POP()
 
-
 namespace Gtk
 {
+
+_DEPRECATE_IFDEF_START
 
 class Widget;
 class Window;
@@ -45,7 +46,7 @@ class Window;
 #ifndef DOXYGEN_SHOULD_SKIP_THIS
 //Actually, I'd like to just keep these out of the alphabetical list. murrayc.
 
-_DEPRECATE_IFDEF_START
+
 /// KeySnooper Signal Class (internal)
 class KeySnooperSig
 {
@@ -57,9 +58,10 @@ public:
 protected:
   static int gtk_callback(GtkWidget* widget, GdkEventKey* event, gpointer data);
 };
-_DEPRECATE_IFDEF_END
 
 #endif /* DOXYGEN_SHOULD_SKIP_THIS */
+
+_DEPRECATE_IFDEF_END
 
 
 //**********************************************************************
@@ -85,11 +87,14 @@ _DEPRECATE_IFDEF_END
  *   kit.run(window);
  * }
  * @endcode
+ *
+ * @deprecated Use Gtk::Application instead.
  */
 class Main : public sigc::trackable
 {
 public:
 
+_DEPRECATE_IFDEF_START
   //This offers the same functionality as gtk_init_with_args():
   /** Scans the argument vector, and strips off all parameters parsed by GTK+ or your @a option_context.
    * Add a Glib::OptionGroup to the Glib::OptionContext to parse your own command-line arguments.  
@@ -110,6 +115,8 @@ public:
    * @param option_context A Glib::OptionContext containing Glib::OptionGroups which described the command-line arguments taken by your program. 
    *
    * @throw Glib::OptionError
+   *
+   * @deprecated Use Gtk::Application instead.
    */
   Main(int& argc, char**& argv, Glib::OptionContext& option_context);
 
@@ -127,6 +134,8 @@ public:
    * setlocale(LC_ALL, ""). You would want to pass false if you wanted to set 
    * the locale for your program to something other than the user's locale, or 
    * if you wanted to set different values for different locale categories.
+   *
+   * @deprecated Use Gtk::Application instead.
    */
   Main(int* argc, char*** argv, bool set_locale = true);
 
@@ -139,6 +148,8 @@ public:
    * setlocale(LC_ALL, ""). You would want to pass false if you wanted to set 
    * the locale for your program to something other than the user's locale, or 
    * if you wanted to set different values for different locale categories.
+   *
+   * @deprecated Use Gtk::Application instead.
    */
   Main(int& argc, char**& argv, bool set_locale = true);
   
@@ -148,19 +159,28 @@ public:
    * setlocale(LC_ALL, ""). You would want to pass false if you wanted to set 
    * the locale for your program to something other than the user's locale, or 
    * if you wanted to set different values for different locale categories.
+   *
+   * @deprecated Use Gtk::Application instead.
    */
   explicit Main(bool set_locale = true);
 
- 
+  /**
+   * @deprecated Use Gtk::Application instead. 
+   */
   virtual ~Main();
 
-  /// Access to the one global instance of Gtk::Main.
+  /** Access to the one global instance of Gtk::Main.
+   *
+   * @deprecated Use Gtk::Application instead.
+   */
   static Gtk::Main* instance();
 
   /** Start the event loop.
    * This begins the event loop which handles events.  No
    * events propagate until this has been called.  It may be
    * called recursively to popup dialogs
+   *
+   * @deprecated Use Gtk::Application instead.
    */
   static void run();
 
@@ -169,13 +189,20 @@ public:
    * the application, but just call hide() on your Window class.
    *
    * @param window The window to show. This method will return when the window is hidden.
+   *
+   * @deprecated Use Gtk::Application instead.
    */
   static void run(Window& window);
 
   /** Makes the innermost invocation of the main loop return when it regains control.
+   *
+   * @deprecated Use Gtk::Application instead.
    */
   static void quit();
 
+  /**
+   * @deprecated Use Gtk::Application instead.
+   */
   static guint level();
 
   //This attempts to provide the same functionality as gtk_get_option_group():
@@ -188,8 +215,13 @@ public:
    *
    * @param option_context Option Context to which the group will be added.
    * @param open_default_display Whether to open the default display when parsing the commandline arguments.
+   *
+   * @deprecated Use Gtk::Application instead.
    */
   static void add_gtk_option_group(Glib::OptionContext& option_context, bool open_default_display = true);
+
+_DEPRECATE_IFDEF_END
+
 
   /** Runs a single iteration of the main loop.
    * If no events are waiting to be processed GTK+ will block until the next event is noticed.
@@ -217,6 +249,7 @@ public:
   static bool events_pending();
 
 _DEPRECATE_IFDEF_START
+
   /** KeySnooper signal
    * Allows you to channel keypresses to a signal handler
    * without registering with the widget.
@@ -230,14 +263,19 @@ _DEPRECATE_IFDEF_START
    * @deprecated Key snooping should not be done. Events should be handled by widgets.
    */
   static KeySnooperSig& signal_key_snooper();
-_DEPRECATE_IFDEF_END
 
-  // Initialize table of wrap_new functions.
-  // Doesn't need an instance of Gtk::Main.
+  /** Initialize the table of wrap_new functions.
+   * This doesn't need an instance of Gtk::Main.
+   *
+   * @deprecated Use Gtk::Application instead.
+   */
   static void init_gtkmm_internals();
+
+_DEPRECATE_IFDEF_END
 
 protected:
 
+_DEPRECATE_IFDEF_START
   void init(int* argc, char*** argv, bool set_locale);
   // TODO: implement this to use the new Glib::OptionEntry argument parsing classes.
   //void init(int* argc, char*** argv, const std::string& parameter_string, const std::vector<const Glib::OptionEntry&>& entries, const std::string& translation_domain);
@@ -251,13 +289,12 @@ protected:
   // Signal handlers:
   virtual void on_window_hide();
 
-_DEPRECATE_IFDEF_START
   // Signal proxies:
   static KeySnooperSig signal_key_snooper_;
-_DEPRECATE_IFDEF_END
 
 private:
   static Main* instance_;
+_DEPRECATE_IFDEF_END
 };
 
 } // namespace Gtk
