@@ -1,5 +1,13 @@
 2012-03-02  Murray Cumming  <murrayc@murrayc.com>
 
+	Deprecate Gtk::Main in favor of Gtk::Application.
+
+	* gtk/src/main.[hg|ccg]: Deprecate most of this API.
+	* demos/gtk-demo/example_change_display.cc:
+	* demos/gtk-demo/main.cc: Use Gtk::Application instead of Gtk::Main.
+
+2012-03-02  Murray Cumming  <murrayc@murrayc.com>
+
 	ColorSelection*: Document these as deprecated.
 
 	* gtk/src/colorselection.hg: Add @deprecated doxygen tags.
